[gd_scene load_steps=13 format=3 uid="uid://3lxhxe4rp0is"]

[ext_resource type="Script" path="res://age_screen.gd" id="1_ukutc"]
[ext_resource type="PackedScene" uid="uid://ckbf8rkan17s7" path="res://attract_background.tscn" id="2_bevdu"]
[ext_resource type="PackedScene" uid="uid://dfinwfjcsn0jv" path="res://age_label.tscn" id="4_c08h1"]
[ext_resource type="Texture2D" uid="uid://dsrh8hv3p5ynj" path="res://art/banner11.png" id="4_m8ofs"]
[ext_resource type="Texture2D" uid="uid://cwhd00tgq1wrp" path="res://art/fukidashi_pop10.png" id="6_fp57e"]
[ext_resource type="Texture2D" uid="uid://di8dp50u5stut" path="res://art/banner05.png" id="6_ykp5n"]
[ext_resource type="Texture2D" uid="uid://cghmhs4n3bhsc" path="res://art/banner13.png" id="7_7k0to"]
[ext_resource type="FontFile" uid="uid://bnbjxfbrglbpl" path="res://font/Grandstander-ExtraBold.ttf" id="7_kuc0k"]
[ext_resource type="PackedScene" uid="uid://c7dngkd4sttge" path="res://perry.tscn" id="8_vqqru"]
[ext_resource type="PackedScene" uid="uid://dcndxqjr252nt" path="res://button_box.tscn" id="9_m26b3"]
[ext_resource type="PackedScene" uid="uid://bdgt44wf177wd" path="res://age_tip.tscn" id="13_j6xi3"]
[ext_resource type="Texture2D" uid="uid://chhkt30l2vt4b" path="res://art/banner06.png" id="14_bhgw6"]

[node name="AgeScreen" type="Node"]
script = ExtResource("1_ukutc")
metadata/_edit_horizontal_guides_ = [820.0]

[node name="AttractBackground" parent="." instance=ExtResource("2_bevdu")]

[node name="P1Content" type="Node2D" parent="."]

[node name="Banner11" type="Sprite2D" parent="P1Content"]
position = Vector2(262, 593)
rotation = -1.57079
scale = Vector2(1.44475, 1.44475)
texture = ExtResource("4_m8ofs")

[node name="ButtonBox1" parent="P1Content" instance=ExtResource("9_m26b3")]
position = Vector2(263, 984)
scale = Vector2(1.25933, 1.25933)

[node name="MinusTip" parent="P1Content" instance=ExtResource("13_j6xi3")]
top_level = true
position = Vector2(16, 820)
seek_delay = 0.7

[node name="Label" parent="P1Content/MinusTip" index="0"]
text = "-"

[node name="PlusTip" parent="P1Content" instance=ExtResource("13_j6xi3")]
top_level = true
position = Vector2(222, 820)
seek_delay = 0.6

[node name="Label" parent="P1Content/PlusTip" index="0"]
text = "+"
metadata/_edit_use_anchors_ = true

[node name="AgeLabel" parent="P1Content" instance=ExtResource("4_c08h1")]
position = Vector2(79, 227)

[node name="P2Content" type="Node2D" parent="."]

[node name="Banner12" type="Sprite2D" parent="P2Content"]
position = Vector2(720, 593)
rotation = -1.57079
scale = Vector2(1.44475, 1.44475)
texture = ExtResource("6_ykp5n")

[node name="ButtonBox2" parent="P2Content" instance=ExtResource("9_m26b3")]
position = Vector2(721, 984)
scale = Vector2(1.25933, 1.25933)
player_num = "p2"

[node name="MinusTip" parent="P2Content" instance=ExtResource("13_j6xi3")]
position = Vector2(495, 766)
seek_delay = 0.5

[node name="Label" parent="P2Content/MinusTip" index="0"]
text = "-"
metadata/_edit_use_anchors_ = true

[node name="PlusTip" parent="P2Content" instance=ExtResource("13_j6xi3")]
position = Vector2(662, 810)
seek_delay = 0.4

[node name="Label" parent="P2Content/PlusTip" index="0"]
text = "+"
metadata/_edit_use_anchors_ = true

[node name="AgeLabel" parent="P2Content" instance=ExtResource("4_c08h1")]
position = Vector2(545, 225)

[node name="P3Content" type="Node2D" parent="."]

[node name="Banner13" type="Sprite2D" parent="P3Content"]
position = Vector2(1177, 593)
rotation = -1.57079
scale = Vector2(1.44475, 1.44475)
texture = ExtResource("7_7k0to")

[node name="ButtonBox3" parent="P3Content" instance=ExtResource("9_m26b3")]
position = Vector2(1180, 984)
scale = Vector2(1.25933, 1.25933)
player_num = "p3"

[node name="MinusTip" parent="P3Content" instance=ExtResource("13_j6xi3")]
position = Vector2(940, 816)
seek_delay = 0.3

[node name="Label" parent="P3Content/MinusTip" index="0"]
rotation = -0.00153505
text = "-"
metadata/_edit_use_anchors_ = true

[node name="PlusTip" parent="P3Content" instance=ExtResource("13_j6xi3")]
position = Vector2(1115, 816)
seek_delay = 0.2

[node name="Label" parent="P3Content/PlusTip" index="0"]
text = "+"
metadata/_edit_use_anchors_ = true

[node name="AgeLabel" parent="P3Content" instance=ExtResource("4_c08h1")]
position = Vector2(1006, 232)

[node name="P4Content" type="Node2D" parent="."]

[node name="Banner14" type="Sprite2D" parent="P4Content"]
position = Vector2(1641, 593)
rotation = -1.57079
scale = Vector2(1.44475, 1.44475)
texture = ExtResource("14_bhgw6")

[node name="ButtonBox4" parent="P4Content" instance=ExtResource("9_m26b3")]
position = Vector2(1642, 984)
scale = Vector2(1.25933, 1.25933)
player_num = "p4"

[node name="MinusTip" parent="P4Content" instance=ExtResource("13_j6xi3")]
position = Vector2(1411, 816)
seek_delay = 0.107

[node name="Label" parent="P4Content/MinusTip" index="0"]
rotation = -0.00153505
text = "-"
metadata/_edit_use_anchors_ = true

[node name="PlusTip" parent="P4Content" instance=ExtResource("13_j6xi3")]
position = Vector2(1586, 816)

[node name="Label" parent="P4Content/PlusTip" index="0"]
text = "+"
metadata/_edit_use_anchors_ = true

[node name="AgeLabel" parent="P4Content" instance=ExtResource("4_c08h1")]
position = Vector2(1468, 244)

[node name="FukidashiPop10" type="Sprite2D" parent="."]
visible = false
position = Vector2(1092, 597)
rotation = 0.0946143
scale = Vector2(0.941092, 0.941092)
texture = ExtResource("6_fp57e")
flip_v = true

[node name="Label" type="Label" parent="FukidashiPop10"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -695.803
offset_top = -91.4744
offset_right = -172.803
offset_bottom = 137.526
grow_horizontal = 2
rotation = -0.0479618
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_kuc0k")
theme_override_font_sizes/font_size = 100
text = "How old
are you?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Perry" parent="." instance=ExtResource("8_vqqru")]
visible = false
position = Vector2(1146, 674)
scale = Vector2(0.6575, 0.6575)

[editable path="P1Content/MinusTip"]
[editable path="P1Content/PlusTip"]
[editable path="P2Content/MinusTip"]
[editable path="P2Content/PlusTip"]
[editable path="P3Content/MinusTip"]
[editable path="P3Content/PlusTip"]
[editable path="P4Content/MinusTip"]
[editable path="P4Content/PlusTip"]
